RESOLVED FIXED260152
REGRESSION(265135@main): CSS filter is not applied on the root SVG element
https://bugs.webkit.org/show_bug.cgi?id=260152
Summary REGRESSION(265135@main): CSS filter is not applied on the root SVG element
Yury Semikhatsky
Reported 2023-08-14 10:55:34 PDT
Created attachment 467267 [details] test.html Open the attached test.html file in Safari. The circrle is expected to be blurred, but it is not in Safari Technology Preview Release 176 (Safari 17.0, WebKit 18617.1.3.2). Working fine in Version 16.6 (18615.3.12.11.2). Tested on macOS 13.5 Original Playwright report: https://github.com/microsoft/playwright/issues/26447
Attachments
test.html (640 bytes, text/html)
2023-08-14 10:55 PDT, Yury Semikhatsky
no flags
actual.png (1.18 MB, image/png)
2023-08-14 10:56 PDT, Yury Semikhatsky
no flags
expected.png (1.23 MB, image/png)
2023-08-14 10:56 PDT, Yury Semikhatsky
no flags
reduced test case (240 bytes, text/html)
2023-08-21 17:01 PDT, Said Abou-Hallawa
no flags
Yury Semikhatsky
Comment 1 2023-08-14 10:56:08 PDT
Created attachment 467268 [details] actual.png
Yury Semikhatsky
Comment 2 2023-08-14 10:56:25 PDT
Created attachment 467269 [details] expected.png
Radar WebKit Bug Importer
Comment 3 2023-08-21 10:56:17 PDT
Said Abou-Hallawa
Comment 4 2023-08-21 17:01:49 PDT
Created attachment 467375 [details] reduced test case
Kiet Ho
Comment 5 2023-08-22 15:36:38 PDT
EWS
Comment 6 2023-08-24 11:28:49 PDT
Committed 267236@main (d4e801ecf045): <https://commits.webkit.org/267236@main> Reviewed commits have been landed. Closing PR #16949 and removing active labels.
Alexey Proskuryakov
Comment 7 2023-09-28 08:21:29 PDT
*** Bug 262180 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.